--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <strong>We're sorry but aaa doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
   <div id="g_id_onload" data-client_id="335012850826-gvrev3vnd53u401ne1coqtrepudrmjje.apps.googleusercontent.com"
-    data-context="signin" data-ux_mode="popup" data-login_uri="http://localhost:8080" data-itp_support="true">
+    data-context="signin" data-ux_mode="popup" data-login_uri="https://ambiesoft.com/everydaytask" data-itp_support="true">
   </div>
 
   <div class="g_id_signin" data-type="standard" data-shape="rectangular" data-theme="outline" data-text="signin_with"
