--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="google-signin-client_id" content="335012850826-gvrev3vnd53u401ne1coqtrepudrmjje.apps.googleusercontent.com">
+  <meta name="google-signin-client_id"
+    content="335012850826-gvrev3vnd53u401ne1coqtrepudrmjje.apps.googleusercontent.com">
   <title>EverydayTask</title>
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script>
   <script src="./func.js"></script>
+
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -32,6 +34,7 @@
     const clientid = '335012850826-gvrev3vnd53u401ne1coqtrepudrmjje.apps.googleusercontent.com';
 
     function handleToken(e) {
+      console.log("handleToken is called")
       console.log(e);
       if (!e.credential) {
         return;
@@ -44,9 +47,21 @@
 
       // Login succeeded, remove button
       removeGoogleButton();
+
+      tokenClient.requestAccessToken({ prompt: '' });
+
+      if (gapi.client.getToken() === null) {
+        // Prompt the user to select a Google Account and ask for consent to share their data
+        // when establishing a new session.
+        tokenClient.requestAccessToken({ prompt: 'consent' });
+      } else {
+        // Skip display of account chooser and consent dialog for an existing session.
+        tokenClient.requestAccessToken({ prompt: '' });
+      }
     }
 
     window.onload = function () {
+      console.log("window.onload is called")
       google.accounts.id.initialize({
         client_id: clientid,
         callback: handleToken
@@ -70,13 +85,147 @@
       Cookies.remove("gid");
       renderGoogleButton();
     }
+
+    function parseJwt(token) {
+      var base64Url = token.split('.')[1];
+      var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+      var jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function (c) {
+        return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+      }).join(''));
+
+      return JSON.parse(jsonPayload);
+    }
+
+    const API_KEY = 'AIzaSyBwo4I6oVCzFCW3X10Dch0AIJeTLR0VmK8';
+    const DISCOVERY_DOC = 'https://script.googleapis.com/$discovery/rest?version=v1';
+    const SCOPES = 'https://www.googleapis.com/auth/script.projects';
+
+    function gapiLoaded() {
+      console.log("gapiLoaded is called")
+      gapi.load('client', initializeGapiClient);
+    }
+    /**
+    * Callback after the API client is loaded. Loads the
+    * discovery doc to initialize the API.
+    */
+    async function initializeGapiClient() {
+      console.log("initializeGapiClient is called")
+      await gapi.client.init({
+        apiKey: API_KEY,
+        discoveryDocs: [DISCOVERY_DOC],
+      });
+      gapiInited = true;
+    }
+    function gisLoaded() {
+      console.log("gisLoaded is called")
+      tokenClient = google.accounts.oauth2.initTokenClient({
+        client_id: clientid,
+        scope: SCOPES,
+        callback: '', // defined later
+      });
+      gisInited = true;
+    }
+    function renderGoogleButton() {
+      google.accounts.id.renderButton(
+        document.getElementById('googlelogin'), // ボタンを描画する要素のID
+        {
+          click_listener: handleToken
+        }
+      );
+    }
+    function removeGoogleButton() {
+      document.getElementById('googlelogin').innerHTML = "";
+    }
+    // google.accounts.id.prompt((notification) => {
+    //   console.log(notification);
+    //   if (notification.isNotDisplayed() || notification.isSkippedMoment()) {
+    //     // continue with another identity provider.
+    //     console.log(notification.getNotDisplayedReason())
+    //   }
+    // });
+    // google.accounts.id.renderButton(document.getElementById("googlelogin"));
+
+    var depid_head = "AKfycbznJza6mTsxZhaa-uUnN9PIzo5eTNIRhsFZWPmo5f2L";
+    var depid_anygoogleaccount = "AKfycbxAU6LlCs8_H9R3d2stU0uUScj7N4N5-NToNWGSgeciYukkETdKlTsOBCDBYoJu3yo6Pg";
+    var depid_anyone = "AKfycbxyG52BkbMZd-EneXxwaLpC-8KUj2QQsi0B1kW3zpLYKlQTciFGiFeCK_vTeUR4Q0j5aA";
+    var depid_tanin = "AKfycbw1uH-oQ8FO4RmdXzRdykkFUdcBPMce4EJ1xcRTd1qG8T-S5kE";
+
+    var apikey = "AIzaSyBwo4I6oVCzFCW3X10Dch0AIJeTLR0VmK8"
+    function testGet_app() {
+      let url = `https://script.google.com/macros/s/${depid_head}/exec?a=abc&key=${apikey}`;
+
+      fetch(url, {
+        method: 'POST',
+        redirect: "follow",
+        headers: {
+          // 'Accept': 'application/json',
+          'Content-Type': 'application/x-www-form-urlencoded'
+        },
+      })
+        .then(response => response.json())
+        .then(data => console.log(data))
+        .catch(error => console.error(error));
+
+      // fetch(url, {
+      //     method: 'POST',
+      //     headers: {
+      //         'Content-Type': 'application/json'
+      //     },
+      //     body: JSON.stringify(data)
+      // })
+      //     .then(response => response.json())
+      //     .then(data => console.log(data))
+      //     .catch(error => console.error(error));
+
+      // fetch(url, {
+      //     redirect: "follow",
+      //     method: "POST",
+      //     body: JSON.stringify(data),
+      //     headers: {
+      //         "Content-Type": "text/plain;charset=utf-8",
+      //     },
+      // })
+    }
+    function testGet_api() {
+      let url = 'https://script.googleapis.com/v1/scripts/AKfycbxAU6LlCs8_H9R3d2stU0uUScj7N4N5-NToNWGSgeciYukkETdKlTsOBCDBYoJu3yo6Pg:run';
+      // let data = "key=AIzaSyBwo4I6oVCzFCW3X10Dch0AIJeTLR0VmK8";
+      let postdata = {
+        "function": "doGet",
+        "parameters": [
+          123
+        ],
+        // "sessionState": string,
+        "devMode": true,
+      };
+      token = gapi.client.getToken();
+      console.log(token)
+
+      fetch(url, {
+        method: 'POST',
+        redirect: "follow",
+        headers: {
+          // 'Accept': 'application/json',
+          // 'Content-Type': 'application/x-www-form-urlencoded'
+          'Content-Type': 'application/json',
+          'Authorization': token.token_type + ' ' + token.access_token,
+        },
+        body: JSON.stringify(postdata),
+      })
+        .then(response => response.json())
+        .then(data => console.log(data))
+        .catch(error => console.error(error));
+    }        
   </script>
   <p>EverydayTask</p>
 
   <button class="button" onclick="onLoginClick()">LOGIN</button>
   <button class="button" onclick="onLogoutClick()">LOGOUT</button>
 
-  <button onclick="testGet()">TestGet</button>
+  <button onclick="testGet_app()">testGet_app</button>
+  <button onclick="testGet_api()">testGet_api</button>
+
+  <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
+  <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
 </body>
 
 </html>
