--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,6 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="google-signin-client_id"
-    content="335012850826-gvrev3vnd53u401ne1coqtrepudrmjje.apps.googleusercontent.com">
   <title>EverydayTask</title>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script>
@@ -33,21 +31,21 @@
   <script>
     const clientid = '335012850826-gvrev3vnd53u401ne1coqtrepudrmjje.apps.googleusercontent.com';
 
-    function handleToken(e) {
-      console.log("handleToken is called")
-      console.log(e);
-      if (!e.credential) {
-        return;
-      }
-      let cred = parseJwt(e.credential);
-      console.log(cred)
+    // function handleToken(e) {
+    //   console.log("handleToken is called")
+    //   console.log(e);
+    //   if (!e.credential) {
+    //     return;
+    //   }
+    //   let cred = parseJwt(e.credential);
+    //   console.log(cred)
 
-      const expiresDate = new Date(cred.exp * 1000); // Unix時間をミリ秒に変換する
-      Cookies.set("gid", cred.sub, { expires: expiresDate });
+    //   const expiresDate = new Date(cred.exp * 1000); // Unix時間をミリ秒に変換する
+    //   Cookies.set("gid", cred.sub, { expires: expiresDate });
 
-      // Login succeeded, remove button
-      removeGoogleButton();
-    }
+    //   // Login succeeded, remove button
+    //   removeGoogleButton();
+    // }
 
     function ensureToken() {
       if (gapi.client.getToken() === null) {
@@ -61,42 +59,33 @@
         return true;
       }
     }
-    window.onload = function () {
-      console.log("window.onload is called")
-      google.accounts.id.initialize({
-        client_id: clientid,
-        callback: handleToken
-      });
-      // google.accounts.id.prompt();
-      console.log("gid is", Cookies.get("gid"));
-      if (!Cookies.get("gid")) {
-        renderGoogleButton();
-      }
+    // window.onload = function () {
+    //   console.log("window.onload is called")
+    //   google.accounts.id.initialize({
+    //     client_id: clientid,
+    //     callback: handleToken
+    //   });
+    //   // google.accounts.id.prompt();
+    //   console.log("gid is", Cookies.get("gid"));
+    //   if (!Cookies.get("gid")) {
+    //     renderGoogleButton();
+    //   }
 
-      console.log("onloaded")
-    };
+    //   console.log("onloaded")
+    // };
 
-    function onLoginClick() {
-      console.log("onLoginClick")
-      renderGoogleButton();
-    }
+    // function onLoginClick() {
+    //   console.log("onLoginClick")
+    //   renderGoogleButton();
+    // }
 
-    function onLogoutClick() {
-      console.log("onLogoutClick")
-      google.accounts.id.disableAutoSelect();
-      Cookies.remove("gid");
-      renderGoogleButton();
-    }
+    // function onLogoutClick() {
+    //   console.log("onLogoutClick")
+    //   google.accounts.id.disableAutoSelect();
+    //   Cookies.remove("gid");
+    //   renderGoogleButton();
+    // }
 
-    function parseJwt(token) {
-      var base64Url = token.split('.')[1];
-      var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-      var jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function (c) {
-        return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-      }).join(''));
-
-      return JSON.parse(jsonPayload);
-    }
 
     const API_KEY = 'AIzaSyBwo4I6oVCzFCW3X10Dch0AIJeTLR0VmK8';
     const DISCOVERY_DOC = 'https://script.googleapis.com/$discovery/rest?version=v1';
@@ -133,17 +122,6 @@
       console.log("tokenClient", tokenClient)
       gisInited = true;
     }
-    function renderGoogleButton() {
-      google.accounts.id.renderButton(
-        document.getElementById('googlelogin'), // ボタンを描画する要素のID
-        {
-          click_listener: handleToken
-        }
-      );
-    }
-    function removeGoogleButton() {
-      document.getElementById('googlelogin').innerHTML = "";
-    }
     // google.accounts.id.prompt((notification) => {
     //   console.log(notification);
     //   if (notification.isNotDisplayed() || notification.isSkippedMoment()) {
@@ -158,50 +136,16 @@
     var depid_anyone = "AKfycbxyG52BkbMZd-EneXxwaLpC-8KUj2QQsi0B1kW3zpLYKlQTciFGiFeCK_vTeUR4Q0j5aA";
     var depid_tanin = "AKfycbw1uH-oQ8FO4RmdXzRdykkFUdcBPMce4EJ1xcRTd1qG8T-S5kE";
 
-    var apikey = "AIzaSyBwo4I6oVCzFCW3X10Dch0AIJeTLR0VmK8"
-    function testGet_app() {
-      let url = `https://script.google.com/macros/s/${depid_head}/exec?a=abc&key=${apikey}`;
+    // var apikey = "AIzaSyBwo4I6oVCzFCW3X10Dch0AIJeTLR0VmK8"
 
-      fetch(url, {
-        method: 'POST',
-        redirect: "follow",
-        headers: {
-          // 'Accept': 'application/json',
-          'Content-Type': 'application/x-www-form-urlencoded'
-        },
-      })
-        .then(response => response.json())
-        .then(data => console.log(data))
-        .catch(error => console.error(error));
-
-      // fetch(url, {
-      //     method: 'POST',
-      //     headers: {
-      //         'Content-Type': 'application/json'
-      //     },
-      //     body: JSON.stringify(data)
-      // })
-      //     .then(response => response.json())
-      //     .then(data => console.log(data))
-      //     .catch(error => console.error(error));
-
-      // fetch(url, {
-      //     redirect: "follow",
-      //     method: "POST",
-      //     body: JSON.stringify(data),
-      //     headers: {
-      //         "Content-Type": "text/plain;charset=utf-8",
-      //     },
-      // })
-    }
-    function testGet_api() {
+    function runRemoteScript(func) {
       if (!ensureToken()) {
         return;
       }
       let url = `https://script.googleapis.com/v1/scripts/${depid_head}:run`;
       // let data = "key=AIzaSyBwo4I6oVCzFCW3X10Dch0AIJeTLR0VmK8";
       let postdata = {
-        "function": "doGet",
+        "function": func,
         "parameters": [
           123
         ],
@@ -226,14 +170,20 @@
         .then(data => console.log(data))
         .catch(error => console.error(error));
     }        
+    function getABC() {
+      runRemoteScript("getABC");
+    }
+    function createSpread() {
+      runRemoteScript("createSpread");
+    }
   </script>
   <p>EverydayTask</p>
 
-  <button class="button" onclick="onLoginClick()">LOGIN</button>
-  <button class="button" onclick="onLogoutClick()">LOGOUT</button>
+  <!-- <button class="button" onclick="onLoginClick()">LOGIN</button>
+  <button class="button" onclick="onLogoutClick()">LOGOUT</button> -->
 
-  <button onclick="testGet_app()">testGet_app</button>
-  <button onclick="testGet_api()">testGet_api</button>
+  <button class="button" onclick="getABC()">getABC</button>
+  <button class="button" onclick="createSpread()">createSpread</button>
 
   <!-- GIS Google Identity Service -->
   <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
