--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <title>EverydayTask</title>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script>
+  <script src="./subfunc.js"></script>
+  <script src="./uifunc.js"></script>
   <script src="./func.js"></script>
 
   <link rel="stylesheet" href="style.css">
@@ -21,27 +23,27 @@
   <h1>EverydayTask</h1>
   <p>毎日やることをチェック</p>
   <div class="wrapper">
+    <button id="beforelogin" class="button" onclick="ensureToken()">Googleでログイン</button>
+    <button id="afterlogin" class="button" onclick="revokeToken()">ログオフ</button>
+
     <button class="button" onclick="getABC()">getABC</button>
-    <button class="button" onclick="createSpread()">createSpread</button>
     <button class="button" onclick="getTasks()">getTasks</button>
-    <div id="beforelogin">
-      <button class="button" onclick="ensureToken()">Googleでログイン</button>
-    </div>
   </div>
 
   <div id="wrapper" class="wrapper">
     <div id="container" class="container">
       <div class="item">
         <p class="text">テキスト1aaaaaaaaaa</p>
-        <button class="taskbutton" data-value="100" onclick="onTaskAction(this)">☐</button>
+        <button class="taskbutton" data-taskid=100 data-taskaction="100" onclick="onTaskAction(this)">☐</button>
       </div>
       <div class="item">
         <p class="text">テキスト2</p>
-        <button class="taskbutton" data-value="http://example.com/" onclick="onTaskAction(this)">☐</button>
+        <button class="taskbutton" data-taskid=123 data-taskaction="http://example.com/"
+          onclick="onTaskAction(this)">☐</button>
       </div>
     </div>
   </div>
-  <template id="myTemplate">
+  <template id="taskTemplate">
     <div class="item">
       <p class="text"></p>
       <button class="taskbutton" onclick="onTaskAction(this)"></button>
