--- a/src/index.html
+++ b/src/index.html
@@ -87,6 +87,10 @@
     </div>
   </template>
 
+  <button onclick="ttt()">ttt</button>
+  <button onclick="createNewGoogleSheet()">createNewGoogleSheet</button>
+  <button onclick="setCellValue()">setCellValue</button>
+
   <!-- GIS Google Identity Service -->
   <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
 
