able to create a new spread by client script

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,7 @@
 
   <button onclick="ttt()">ttt</button>
   <button onclick="createNewGoogleSheet()">createNewGoogleSheet</button>
+  <button onclick="OnGetTasksGoogleSheet()">getTasksGoogleSheet</button>
   <button onclick="setCellValue()">setCellValue</button>
 
   <!-- GIS Google Identity Service -->
