--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <script src="./userdata.js"></script>
   <script src="./subfunc.js"></script>
   <script src="./uifunc.js"></script>
+  <script src="./spread.js"></script>
   <script src="./func.js"></script>
 
   <link rel="stylesheet" href="style.css">
@@ -37,8 +38,7 @@
 
   <div class="wrapper">
     <button class="button" onclick="onShowSpread()">タスクを編集</button>
-    <button class="button" onclick="addNewTask()">タスクを追加</button>
-    <button class="button" onclick="getABC()">getABC</button>
+    <button class="button" onclick="onAddNewTask()">タスクを追加</button>
     <button class="button" onclick="onGetTasks()">getTasks</button>
   </div>
 
@@ -91,7 +91,6 @@
     </div>
   </template>
 
-  <button onclick="ttt()">ttt</button>
   <button onclick="createNewGoogleSheet()">createNewGoogleSheet</button>
   <button onclick="OnGetSpread()">getSpread</button>
   <button onclick="setCellValue()">setCellValue</button>
