--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,10 @@
     <div id="container" class="container">
       <div class="item">
         <p class="text">テキスト1aaaaaaaaaa</p>
-        <button class="taskbutton" data-taskid=100 data-taskaction="100" onclick="onTaskAction(this)">☐</button>
-        <button class="taskeditbutton" data-id=100 onclick="onShowEdit(this)">✎</button>
+        <div class="xxx">
+          <button class="taskbutton" data-taskid=100 data-taskaction="100" onclick="onTaskAction(this)">☐</button>
+          <button class="taskeditbutton" data-id=100 onclick="onShowEdit(this)">✎</button>
+        </div>
       </div>
       <div id="itemedit100" class="itemedit" style="display: none;">
         <div>
