--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
   </div>
 
   <div class="wrapper">
-    <button class="button" onclick="onShowSpread()">タスクを編集</button>
-    <button class="button" onclick="onAddNewTask()">タスクを追加</button>
+    <button class="button" onclick="onShowSpread()">タスク編集</button>
+    <button class="button" onclick="onAddNewTask()">タスク追加</button>
     <button class="button" onclick="onGetTasks()">getTasks</button>
   </div>
 
@@ -47,29 +47,45 @@
 
   <div id="wrapper" class="wrapper">
     <div id="container" class="container">
-      <div class="item">
-        <p class="text">テキスト1aaaaaaaaaa</p>
-        <div class="xxx">
-          <button class="taskbutton" data-taskid=100 data-taskaction="100" onclick="onTaskAction(this)">☐</button>
-          <button class="taskeditbutton" data-id=100 onclick="onShowEdit(this)">✎</button>
+      <div class="itemwrapper">
+        <div class="item">
+          <p class="text">テキスト1aaaaaaaaaa</p>
+          <div class="twobutton">
+            <button class="taskbutton" data-taskid=100 data-taskaction="100" onclick="onTaskAction(this)">☐</button>
+            <button class="taskeditbutton" data-id=100 onclick="onShowEdit(this)">✎</button>
+          </div>
+        </div>
+        <div id="itemedit100" class="itemedit" style="display: none;">
+          <div>
+            <input type="text" />
+          </div>
+          <div>
+            <input type="text" />
+          </div>
+          <div>
+            <button class="editbutton" data-id=100 onclick="onEditItem(this)">変更</button>
+          </div>
         </div>
       </div>
-      <div id="itemedit100" class="itemedit" style="display: none;">
-        <div>
-          <input type="text" />
+      <div class="itemwrapper">
+        <div class="item">
+          <p class="text">fffffffffffffffffffffffffffffffffffffwefwe</p>
+          <div class="twobutton">
+            <button class="taskbutton" data-taskid=101 data-taskaction="101" onclick="onTaskAction(this)">☐</button>
+            <button class="taskeditbutton" data-id=101 onclick="onShowEdit(this)">✎</button>
+          </div>
         </div>
-        <div>
-          <input type="text" />
+        <div id="itemedit101" class="itemedit" style="display: none;">
+          <div>
+            <input type="text" />
+          </div>
+          <div>
+            <input type="text" />
+          </div>
+          <div>
+            <button class="editbutton" data-id=101 onclick="onEditItem(this)">変更</button>
+          </div>
         </div>
-        <div>
-          <button class="editbutton" data-id=100 onclick="onEditItem(this)">変更</button>
-        </div>
-      </div>
-
-      <div class="item">
-        <p class="text">テキスト2</p>
-        <button class="taskbutton" data-taskid=123 data-taskaction="http://example.com/"
-          onclick="onTaskAction(this)">☐</button>
       </div>
     </div>
   </div>
@@ -93,10 +109,6 @@
       </div>
     </div>
   </template>
-
-  <button onclick="createNewGoogleSheet()">createNewGoogleSheet</button>
-  <button onclick="OnGetSpread()">getSpread</button>
-  <button onclick="setCellValue()">setCellValue</button>
 
   <!-- GIS Google Identity Service -->
   <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
