--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,9 @@
   </div>
 
   <div class="wrapper">
-    <button class="button" onclick="onShowSpread()">タスク編集</button>
+    <button class="button" onclick="onGetTasks()">タスク取得</button>
     <button class="button" onclick="onAddNewTask()">タスク追加</button>
-    <button class="button" onclick="onGetTasks()">getTasks</button>
+    <button class="button" onclick="onShowSpread()">タスク編集</button>
   </div>
 
   <div id="guruguru"></div>
