--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>EverydayTask</title>
+  <link rel="icon" href="favicon.ico">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
@@ -109,6 +110,16 @@
       </div>
     </div>
   </template>
+
+  <footer>
+    <ul class="list-inline">
+      <li class="list-inline-item"><a href="#">利用規約</a></li>
+      <li class="list-inline-item"><a href="#">利用方法</a></li>
+      <li class="list-inline-item"><a href="#">プライバシーポリシー</a></li>
+      <li class="list-inline-item"><a href="#">お問い合わせ</a></li>
+    </ul>
+    <p>&copy; 2023 ambiesoft.com</p>
+  </footer>
 
   <!-- GIS Google Identity Service -->
   <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
