--- a/src/index.html
+++ b/src/index.html
@@ -38,79 +38,86 @@
     </div>
   </div>
 
-  <div class="wrapper">
-    <button class="button" onclick="onGetTasks()">タスク取得</button>
-    <button class="button" onclick="onAddNewTask()">タスク追加</button>
-    <button class="button" onclick="onShowSpread()">タスク編集</button>
-  </div>
+  <div id="loggedin" style="display: none;">
+    <div class="wrapper">
+      <button class="button" onclick="onGetTasks()">タスク取得</button>
+      <button class="button" onclick="onAddNewTask()">タスク追加</button>
+      <button class="button" onclick="onShowSpread()">タスク編集</button>
+    </div>
 
-  <div id="guruguru"></div>
+    <div id="guruguru"></div>
 
-  <div id="wrapper" class="wrapper">
-    <div id="container" class="container">
-      <div class="itemwrapper">
-        <div class="item">
-          <p class="text">テキスト1aaaaaaaaaa</p>
-          <div class="twobutton">
-            <button class="taskbutton" data-taskid=100 data-taskaction="100" onclick="onTaskAction(this)">☐</button>
-            <button class="taskeditbutton" data-id=100 onclick="onShowEdit(this)">✎</button>
+    <div id="wrapper" class="wrapper">
+      <div id="container" class="container">
+        <div class="itemwrapper">
+          <div class="item">
+            <p class="text">テキスト1aaaaaaaaaa</p>
+            <div class="twobutton">
+              <button class="taskbutton" data-taskid=100 data-taskaction="100" onclick="onTaskAction(this)">☐</button>
+              <button class="taskeditbutton" data-id=100 onclick="onShowEdit(this)">✎</button>
+            </div>
+          </div>
+          <div id="itemedit100" class="itemedit" style="display: none;">
+            <div>
+              <input type="text" />
+            </div>
+            <div>
+              <input type="text" />
+            </div>
+            <div>
+              <button class="editbutton" data-id=100 onclick="onEditItem(this)">変更</button>
+            </div>
           </div>
         </div>
-        <div id="itemedit100" class="itemedit" style="display: none;">
-          <div>
-            <input type="text" />
+        <div class="itemwrapper">
+          <div class="item">
+            <p class="text">fffffffffffffffffffffffffffffffffffffwefwe</p>
+            <div class="twobutton">
+              <button class="taskbutton" data-taskid=101 data-taskaction="101" onclick="onTaskAction(this)">☐</button>
+              <button class="taskeditbutton" data-id=101 onclick="onShowEdit(this)">✎</button>
+            </div>
           </div>
-          <div>
-            <input type="text" />
-          </div>
-          <div>
-            <button class="editbutton" data-id=100 onclick="onEditItem(this)">変更</button>
-          </div>
-        </div>
-      </div>
-      <div class="itemwrapper">
-        <div class="item">
-          <p class="text">fffffffffffffffffffffffffffffffffffffwefwe</p>
-          <div class="twobutton">
-            <button class="taskbutton" data-taskid=101 data-taskaction="101" onclick="onTaskAction(this)">☐</button>
-            <button class="taskeditbutton" data-id=101 onclick="onShowEdit(this)">✎</button>
-          </div>
-        </div>
-        <div id="itemedit101" class="itemedit" style="display: none;">
-          <div>
-            <input type="text" />
-          </div>
-          <div>
-            <input type="text" />
-          </div>
-          <div>
-            <button class="editbutton" data-id=101 onclick="onEditItem(this)">変更</button>
+          <div id="itemedit101" class="itemedit" style="display: none;">
+            <div>
+              <input type="text" />
+            </div>
+            <div>
+              <input type="text" />
+            </div>
+            <div>
+              <button class="editbutton" data-id=101 onclick="onEditItem(this)">変更</button>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <template id="taskTemplate">
+      <div class="itemwrapper">
+        <div class="item">
+          <p class="text"></p>
+          <button class="taskbutton" onclick="onTaskAction(this)"></button>
+          <button class="taskeditbutton" onclick="onShowEdit(this)">✎</button>
+        </div>
+        <div class="itemedit" style="display: none;">
+          <div>
+            <input class="itemeditinputname" type="text" />
+          </div>
+          <div>
+            <input class="itemeditinputaction" type="text" />
+          </div>
+          <div>
+            <button class="editbutton" onclick="onEditItem(this)">変更</button>
+          </div>
+        </div>
+      </div>
+    </template>
   </div>
-  <template id="taskTemplate">
-    <div class="itemwrapper">
-      <div class="item">
-        <p class="text"></p>
-        <button class="taskbutton" onclick="onTaskAction(this)"></button>
-        <button class="taskeditbutton" onclick="onShowEdit(this)">✎</button>
-      </div>
-      <div class="itemedit" style="display: none;">
-        <div>
-          <input class="itemeditinputname" type="text" />
-        </div>
-        <div>
-          <input class="itemeditinputaction" type="text" />
-        </div>
-        <div>
-          <button class="editbutton" onclick="onEditItem(this)">変更</button>
-        </div>
-      </div>
-    </div>
-  </template>
 
+  <div id="loggedout">
+    <div class="wrapper">
+      <p>ログインしてください</p>
+    </div>
+  </div>
   <footer>
     <ul class="list-inline">
       <li class="list-inline-item"><a href="#">利用規約</a></li>
