--- a/src/index.html
+++ b/src/index.html
@@ -27,14 +27,16 @@
     <strong>We're sorry but aaa doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
 
-  <div class="flex-container">
-    <div class="box">
-      <h1>EverydayTask</h1>
-      <h4>毎日のタスクをチェック</h2>
-    </div class="box">
-    <div>
-      <button id="beforelogin" class="button" onclick="ensureToken()">Googleでログイン</button>
-      <button id="afterlogin" class="button" onclick="revokeToken()" style="display: none;">ログオフ</button>
+  <div align="center">
+    <div class="flex-container">
+      <div class="box">
+        <h1>EverydayTask</h1>
+        <h4>毎日のタスクをチェック</h2>
+      </div class="box">
+      <div>
+        <button id="beforelogin" class="button" onclick="ensureToken()">Googleでログイン</button>
+        <button id="afterlogin" class="button" onclick="revokeToken()" style="display: none;">ログオフ</button>
+      </div>
     </div>
   </div>
 
