--- a/src/index.html
+++ b/src/index.html
@@ -115,19 +115,27 @@
     </template>
   </div>
 
+  <!-- <button onclick="onGetTasks()">タスク取得</button>
+  <button onclick="onGetSpread()">onGetSpread</button> -->
+
   <div id="loggedout">
     <div class="wrapper">
       <p>ログインしてください</p>
     </div>
   </div>
+
   <footer>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="#">利用規約</a></li>
-      <li class="list-inline-item"><a href="#">利用方法</a></li>
-      <li class="list-inline-item"><a href="#">プライバシーポリシー</a></li>
-      <li class="list-inline-item"><a href="#">お問い合わせ</a></li>
-    </ul>
-    <p>&copy; 2023 ambiesoft.com</p>
+    <div class="wrapper">
+      <div class="container">
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="#">利用規約</a></li>
+          <li class="list-inline-item"><a href="#">利用方法</a></li>
+          <li class="list-inline-item"><a href="#">プライバシーポリシー</a></li>
+          <li class="list-inline-item"><a href="#">お問い合わせ</a></li>
+        </ul>
+        <p>&copy; 2023 ambiesoft.com</p>
+      </div>
+    </div>
   </footer>
 
   <!-- GIS Google Identity Service -->
