reset token after it expires

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       </div class="box">
       <div>
         <button id="beforelogin" class="button" onclick="ensureToken()">Googleでログイン</button>
-        <button id="afterlogin" class="button" onclick="revokeToken()" style="display: none;">ログオフ</button>
+        <button id="afterlogin" class="button" onclick="location.reload()" style="display: none;">ログオフ</button>
       </div>
     </div>
   </div>
