--- a/src/tests/tests.html
+++ b/src/tests/tests.html
@@ -25,7 +25,7 @@
     <strong>We're sorry but aaa doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
 
-  <p id="testout"></p>
+  <pre id="testout"></pre>
 </body>
 
 </html>
