--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,8 @@
             <input class="itemeditinputname" type="text" />
           </div>
           <div>
-            <input class="itemeditinputaction" type="text" />
+            <!-- <input class="itemeditinputaction" type="text" /> -->
+            <textarea class="itemeditinputaction"></textarea>
           </div>
           <div>
             <button class="editbutton" onclick="onEditItem(this)">変更</button>
