make task a class

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <script src="consts.js"></script>
   <script src="globals.js"></script>
   <script src="userdata.js"></script>
+  <script src="task.js"></script>
   <script src="subfunc.js"></script>
   <script src="uifunc.js"></script>
   <script src="spread.js"></script>
@@ -72,6 +73,7 @@
             <button class="editbutton" onclick="onEditItem(this)">変更</button>
           </div>
         </div>
+        <div class="itemseparator"></div>
       </div>
     </template>
   </div>
