--- a/src/tests/tests.html
+++ b/src/tests/tests.html
@@ -14,6 +14,7 @@
   <script src="../consts.js"></script>
   <script src="../globals.js"></script>
   <script src="../userdata.js"></script>
+  <script src="../task.js"></script>
   <script src="../subfunc.js"></script>
   <script src="../uifunc.js"></script>
   <script src="../func.js"></script>
