--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,12 @@
             <button class="editbutton" onclick="onEditItem(this)">変更</button>
           </div>
         </div>
-        <div class="itemseparator"></div>
+      </div>
+    </template>
+
+    <template id="separatorTemplate">
+      <div class="itemseparator">
+        <h1 class="itemsep_h1"></h1>
       </div>
     </template>
   </div>
