--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,12 @@
       </div>
     </template>
 
+    <template id="emptyTemplate">
+      <div class="emptyTask">
+        <p>タスクがありません</p>
+      </div>
+    </template>
+
     <div id="taskbuttons_only5moreitems" style="display: none;">
       <div class="guruguru"></div>
       <div class="wrapper">
