--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="consts.js"></script>
-  <script src="globals.js"></script>
-  <script src="userdata.js"></script>
-  <script src="task.js"></script>
-  <script src="subfunc.js"></script>
-  <script src="uifunc.js"></script>
-  <script src="spread.js"></script>
-  <script src="func.js"></script>
+  <script src="consts.js?v=20230417"></script>
+  <script src="globals.js?v=20230417"></script>
+  <script src="userdata.js?v=20230417"></script>
+  <script src="task.js?v=20230417"></script>
+  <script src="subfunc.js?v=20230417"></script>
+  <script src="uifunc.js?v=20230417"></script>
+  <script src="spread.js?v=20230417"></script>
+  <script src="func.js?v=20230417"></script>
 
   <link rel="stylesheet" href="style.css">
 </head>
