--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
     integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="consts.js?v=20230418"></script>
-  <script src="lang.js?v=20230418"></script>
-  <script src="globals.js?v=20230418"></script>
-  <script src="userdata.js?v=20230418"></script>
-  <script src="task.js?v=20230418"></script>
-  <script src="subfunc.js?v=20230418"></script>
-  <script src="uifunc.js?v=20230418"></script>
-  <script src="spread.js?v=20230418"></script>
-  <script src="func.js?v=20230418"></script>
+  <script src="consts.js?v=20230419"></script>
+  <script src="lang.js?v=20230419"></script>
+  <script src="globals.js?v=20230419"></script>
+  <script src="userdata.js?v=20230419"></script>
+  <script src="task.js?v=20230419"></script>
+  <script src="subfunc.js?v=20230419"></script>
+  <script src="uifunc.js?v=20230419"></script>
+  <script src="spread.js?v=20230419"></script>
+  <script src="func.js?v=20230419"></script>
 
   <link rel="stylesheet" href="style.css">
 </head>
@@ -59,8 +59,11 @@
     <template id="taskTemplate">
       <div class="itemwrapper">
         <div class="item">
-          <p class="text"></p>
-          <button class="taskbutton" onclick="onTaskAction(this)"></button>
+          <div class="itemtext">
+            <p class="text"></p>
+            <p class="timetext">0:00 - 24:00</p>
+          </div>
+          <button class=" taskbutton" onclick="onTaskAction(this)"></button>
           <button class="taskeditbutton" onclick="onShowEdit(this)">✎</button>
         </div>
         <div class="itemedit" style="display: none;">
