--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <script src="spread.js?v=20230419"></script>
   <script src="func.js?v=20230419"></script>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=20230419">
 </head>
 
 <body>
