--- a/src/index.html
+++ b/src/index.html
@@ -170,6 +170,10 @@
     </div>
   </footer>
 
+  <div id="g_id_onload" data-client_id="335012850826-gvrev3vnd53u401ne1coqtrepudrmjje.apps.googleusercontent.com"
+    data-auto_select="true" data-login_uri="https://ambiesoft.com/everydaytask/">
+  </div>
+
   <!-- GIS Google Identity Service -->
   <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
 
